--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "note-taking-app"
+name = "Memo"
 version = "0.1.0"
-description = "A Tauri App"
+description = "A simple note taking app based on Tauri."
 authors = ["you"]
 edition = "2021"
 
